-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.7.0 Beta2
-
None
-
-
5f7b25a69 (dev), 9ca9468ff (6.7), d396eeffd (6.7.0)
MacOS 14.2.1 / Linux Ubuntu 22.04
Qt Creator 12.0.1
Qt 6.7.0-beta2
Steps to reproduce:
- Run https://doc.qt.io/qt-6/qtquickcontrols-attachedstyleproperties-example.html
- Click the open window button
- Change the mode to Dark.
Expected: The child window should get the style from a parent as it is on Qt 6.6.1.
Actual: The child window does not change its style. See the attached video for reference.
Reproducibility: 100%
NOTE: The issue is not reproducible on Qt 6.5.4 and 6.6.1
- relates to
-
QTQAINFRA-6104
Qt Test Attack - Q1, 2024
-
- Open
-