tests/auto/quickcontrols/qquickmaterialstyle/data/tst_material.qml
@@ -51,17 +51,6 @@ TestCase {
     }
 
     Component {
-        id: styledWindowComponent
-        Window {
-            Material.theme: Material.Dark
-            Material.primary: Material.Brown
-            Material.accent: Material.Green
-            Material.background: Material.Yellow
-            Material.foreground: Material.Grey
-        }
-    }
-
-    Component {
         id: buttonLoaderComponent
         Loader {
             active: false
@@ -1308,5 +1297,33 @@ TestCase {
         compare(textFieldActiveFocusSpy.count, 2)
         // false => true => false.
         compare(buttonActiveFocusSpy.count, 2)
+    }
+
+    Component {
+        id: childWindowComponent
+
+        ApplicationWindow {
+            objectName: "parentWindow"
+            property alias childWindow: childWindow
+
+            Material.theme: Material.Dark
+            Material.primary: Material.Brown
+            Material.accent: Material.Green
+            Material.background: Material.Yellow
+            Material.foreground: Material.Grey
+
+            ApplicationWindow {
+                id: childWindow
+                objectName: "childWindow"
+            }
+        }
+    }
+
+    function test_windowBackgroundColorPropagation() {
+        let parentWindow = createTemporaryObject(childWindowComponent, testCase)
+        verify(parentWindow)
+
+        let childWindow = parentWindow.childWindow
+        compare(childWindow.Material.theme, Material.Dark)
     }
 }
